# Mesh-Subdivision

./: .gitignore  README.md
elf/: imgui.ini
elf-18/: imgui.ini
source/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt
source/lib/algorithms/: CMakeLists.txt  MeshTopology.h  loopSubdivision.h  meshOptimize.h  root3Subdivision.h  solverBase.h
source/lib/loadShaders/: CMakeLists.txt  LoadShaders.cpp
source/lib/objLoader/: CMakeLists.txt  tiny_obj_loader.h
source/model/: donut.mtl
